@@ -1,3 +1,8 @@
+Fri Mar 13 15:04:36 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+
+	* ext/stringio/stringio.c (strio_close): don't raise on dobule
+	  close for consistent to IO#close.
+
 Fri Mar 13 15:03:20 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>
 
 	* io.c (rb_io_close_read, rb_io_close_write): don't raise after
